test/errors/expressions_error/zs/offsets/builtin_type_parameter_error.zs
package offsets.builtin_type_parameter_error;

struct BuiltinTypeParameterError(uint32 param)
{
    uint32 arr[];
param:
    uint32 value;
};
